Fixes navbar width on mobile devices

--- a/src/app/home/top-nav/top-nav.component.scss
+++ b/src/app/home/top-nav/top-nav.component.scss
@@ -78,4 +78,14 @@ padding:5px 10px 5px 5px;
   .navbar-toggle{
   bottom: 10px;
   }
+  .navbar-fixed-top{
+  position: relative;
+  top: auto;
+  margin-bottom: 0px;
+  }  
+}
+
+@media (max-width: 767px) /* @grid-float-breakpoint -1 */
+{
+
 }
